// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlaybackRateSvg /> component tests Should match snapshot with 0.75 speed 1`] = `
<DocumentFragment>
  <svg
    class="icon"
    fill="#fff"
  >
    <use
      xlink:href="/svglist.svg#playback_0.75x"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</DocumentFragment>
`;

exports[`<PlaybackRateSvg /> component tests Should match snapshot with 1.5 speed 1`] = `
<DocumentFragment>
  <svg
    class="icon"
    fill="#fff"
  >
    <use
      xlink:href="/svglist.svg#playback_1.5x"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</DocumentFragment>
`;

exports[`<PlaybackRateSvg /> component tests Should match snapshot with 1.25 speed 1`] = `
<DocumentFragment>
  <svg
    class="icon"
    fill="#fff"
  >
    <use
      xlink:href="/svglist.svg#playback_1.25x"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</DocumentFragment>
`;

exports[`<PlaybackRateSvg /> component tests Should match snapshot with 2 speed 1`] = `
<DocumentFragment>
  <svg
    class="icon"
    fill="#fff"
  >
    <use
      xlink:href="/svglist.svg#playback_2x"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</DocumentFragment>
`;

exports[`<PlaybackRateSvg /> component tests Should match snapshot with default props 1`] = `
<DocumentFragment>
  <svg
    class="icon"
    fill="#fff"
  >
    <use
      xlink:href="/svglist.svg#playback_1x"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</DocumentFragment>
`;

exports[`<PlaybackRateSvg /> component tests Should match snapshot with no playback speed 1`] = `
<DocumentFragment>
  <svg
    class="icon"
    fill="#fff"
  >
    <use
      xlink:href="/svglist.svg#playback_2x"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
  </svg>
</DocumentFragment>
`;
